src/main/java/com/example/demo/global/error/GlobalExceptionHandler.java
package com.example.demo.global.error;

import org.springframework.web.bind.annotation.ControllerAdvice;

// 모든 예외 공통적으로 처리
@ControllerAdvice
public class GlobalExceptionHandler {

}
